[package]
name = "twelve-days-of-codemas"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.6.3", features = [
    "arch-cortex-m",
    "defmt",
    "executor-interrupt",
    "executor-thread",
    "integrated-timers",
    "task-arena-size-98304",
] }
embassy-rp = { version = "0.2.0", features = [
    "critical-section-impl",
    "defmt",
    "time-driver",
    "unstable-pac",
] }
embassy-time = { version = "0.3.2", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'
